--- a/src/components/Formulaire/styles.module.scss
+++ b/src/components/Formulaire/styles.module.scss
@@ -29,6 +29,7 @@
       &::placeholder {
         color: #fff;
         font-size: 2rem;
+        background-color: transparent;
       }
     }
   }
