--- a/src/components/KeepInTouch/styles.module.scss
+++ b/src/components/KeepInTouch/styles.module.scss
@@ -23,6 +23,7 @@
         color: silver;
         font-style: normal;
         font-family: "Poppins", sans-serif;
+        background-color: transparent;
       }
     }
   }
