--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -12,14 +12,14 @@
     background-image: url($backgroundImage);
     background-size: cover;
     background-position-y: 70%;
+    background-repeat: no-repeat;
 
     canvas {
       background-color: $backgroundFilter;
       background-size: cover;
       width: 100%;
       height: 100%;
-      z-index: -1;
-      display: block;
+      display: flex;
     }
   }
 }
