--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -7,16 +7,15 @@
 
   .__mask {
     height: 100vh;
-    z-index: 2;
     width: 100%;
     background-image: url($backgroundImage);
+    background-color: $backgroundFilter;
     background-size: cover;
     background-position-y: 70%;
     background-repeat: no-repeat;
+    background-blend-mode: multiply;
 
     canvas {
-      background-color: $backgroundFilter;
-      background-size: cover;
       width: 100%;
       height: 100%;
       display: flex;
