--- a/src/components/AnimCircle/styles.module.scss
+++ b/src/components/AnimCircle/styles.module.scss
@@ -42,7 +42,7 @@
       display: block;
       background-position: 39%;
       canvas {
-        display: block;
+        display: none;
       }
     }
   }
@@ -54,7 +54,7 @@
       display: block;
       background-position: 33%;
       canvas {
-        display: block;
+        display: none;
       }
     }
   }
