--- a/src/components/HeaderTxt/styles.module.scss
+++ b/src/components/HeaderTxt/styles.module.scss
@@ -12,10 +12,9 @@
         width: 100%;
         height: auto;
         padding: 0.5rem;
-        border: 2px solid red;
         display: block;
         h1 {
-          font-size: 7rem;
+          font-size: 5rem;
           padding: 2rem;
           text-align: center;
           color: #999797;
@@ -39,6 +38,31 @@
 }
 
 //////////////////////// RESPONSIVE ///////////////////////////////
+@media only screen and (max-width: 1024px) {
+  .txts {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    ul {
+      list-style-type: none;
+      li {
+        blockquote {
+          width: 100%;
+          height: auto;
+          padding-top: 1rem;
+          border: 2px solid red;
+          display: block;
+          h1 {
+            font-size: 2rem;
+            padding: 2rem;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media only screen and (max-width: 768px) {
   .txts {
     display: flex;
@@ -48,16 +72,16 @@
     ul {
       list-style-type: none;
       li {
-        h1 {
-          font-size: 2rem;
-          padding: 0.5rem;
-          text-align: left;
-        }
-
-        p {
-          color: #fff;
-          font-size: 18px;
-          line-height: 1.3;
+        blockquote {
+          width: 100%;
+          height: auto;
+          padding-top: &rem;
+          border: 2px solid red;
+          display: block;
+          h1 {
+            font-size: 2rem;
+            padding: 2rem;
+          }
         }
       }
     }
