--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -32,6 +32,9 @@
         flex-direction: column;
         margin-left: auto;
         padding: 2rem;
+        overflow: scroll;
+        overflow-x: hidden;
+        overflow-y: scroll;
 
         .__txt {
           width: 15%;
