--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -30,6 +30,9 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     .__modal_content {
       width: 80%;
@@ -42,6 +45,7 @@
         width: auto;
         height: auto;
         cursor: pointer;
+        padding-right: 1rem;
         p {
           font-size: 1.5rem;
           font-style: normal;
