--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -30,9 +30,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    overflow: scroll;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
 
     .__modal_content {
       width: 80%;
@@ -67,6 +65,9 @@
           display: flex;
           width: 100%;
           height: 100%;
+          overflow: scroll;
+          overflow-x: hidden;
+          overflow-y: scroll;
         }
         .__content_text {
           display: flex;
@@ -84,7 +85,6 @@
       align-items: center;
       justify-content: center;
       position: absolute;
-      top: 28px;
       left: 0;
       width: 100%;
       height: 100%;
