create new animation

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -6,6 +6,8 @@ footer {
   bottom: 0;
   justify-content: space-between;
   align-items: center;
+  border: 7px solid greenyellow;
+  background: turquoise;
 
   ul {
     display: flex;
