--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -7,6 +7,8 @@
   text-transform: capitalize;
   z-index: 4;
   align-items: center;
+  border: 7px solid red;
+  background: turquoise;
 
   .__logo {
     display: flex;
