--- a/src/components/ImageEffect/styles.module.scss
+++ b/src/components/ImageEffect/styles.module.scss
@@ -1,33 +1,13 @@
-.canvas__container {
+.loadingContainer {
   display: flex;
   width: 100%;
-  height: 40rem;
+  height: 100%;
   justify-content: center;
   align-items: center;
+  position: absolute;
 
-  .canvas {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    cursor: move;
-    position: relative;
-
-    &#canvas {
-      display: flex;
-      width: auto;
-      height: auto;
-      position: absolute;
-    }
-  }
-}
-
-/////////////////// RESPONSIVE /////////////////
-@media screen and (max-width: 768px) {
-  .canvas__container {
-    display: flex;
-    width: 100%;
-    height: 30rem;
-    justify-content: center;
-    align-items: center;
+  p {
+    font-size: 3rem;
+    color: blue;
   }
 }
