--- a/src/components/ThreeCompt/styles.module.scss
+++ b/src/components/ThreeCompt/styles.module.scss
@@ -1,9 +1,10 @@
 .canvas__container {
   display: flex;
   width: 100%;
-  height: 40rem;
+  height: 100%;
   justify-content: center;
   align-items: center;
+  border: 5px solid blue;
 
   .canvas {
     display: flex;
@@ -26,7 +27,7 @@
   .canvas__container {
     display: flex;
     width: 100%;
-    height: 30rem;
+    height: 100%;
     justify-content: center;
     align-items: center;
   }
