--- a/src/components/ThreeCompt/styles.module.scss
+++ b/src/components/ThreeCompt/styles.module.scss
@@ -1,10 +1,12 @@
 .canvas__container {
   display: flex;
-  width: 100%;
+  // width: 65%;
+  width: 48%;
   height: 100%;
   justify-content: center;
   align-items: center;
-  border: 5px solid blue;
+  border: 3px solid silver;
+  margin-bottom: 2rem;
 
   .canvas {
     display: flex;
