--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -7,15 +7,17 @@
   text-transform: capitalize;
   z-index: 4;
   align-items: center;
-  border: 7px solid red;
-  background: turquoise;
+  //border: 7px solid red;
+  //background: turquoise;
   position: fixed;
+  padding: 3rem;
 
   .__logo {
     display: flex;
     width: 23rem;
     object-fit: contain;
-    height: 5rem;
+    height: auto;
+    padding: 1rem;
     img {
       width: 100%;
       height: 100%;
@@ -46,7 +48,7 @@
           font-size: 35px;
           text-decoration: none;
           list-style-type: none;
-          color: #fff;
+          color: gray;
           cursor: pointer;
           padding: 24px;
           background: transparent;
@@ -138,7 +140,7 @@
       font-style: normal;
       font-weight: bolder;
       padding: 2rem;
-      color: #fff;
+      color: gray;
       &:hover {
         color: silver;
       }
