--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -11,56 +11,54 @@
   .__container {
     display: flex;
     height: 100%;
-    width: 65rem;
+    width: 100%;
     flex-direction: column;
     position: absolute;
-    align-items: center;
-    border: 7px solid red;
-    justify-content: center;
   }
 
   .__section {
     width: 100%;
     display: flex;
     overflow: hidden;
-    height: 100vh;
+    height: 90vh;
+    margin-top: 10vh;
+    justify-content: center;
+    padding: 3rem;
 
     .__box {
       display: flex;
       width: 100%;
       height: 100%;
-      border: 19px solid yellow;
-      justify-content: center;
+      //border: 19px solid yellow;
+      justify-content: flex-start;
       align-items: center;
       position: relative;
+      //padding: 4rem;
 
       .__box_content {
-        width: 100%;
+        width: auto;
+        height: auto;
         display: flex;
         flex-direction: column;
         margin-left: auto;
         padding: 2rem;
-        overflow: scroll;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        border: 19px solid turquoise;
 
         .__txt {
-          width: 15%;
+          width: 32%;
           display: flex;
           margin-left: auto;
           z-index: 3;
           word-wrap: break-word;
-          border: 12px solid rgb(255, 0, 174);
-          background: turquoise;
+          //border: 12px solid rgb(255, 0, 174);
+          //background: turquoise;
 
           blockquote {
             display: block;
             padding: 1.5rem 0;
             p {
-              font-size: 18px;
+              font-size: 24px;
               line-height: 1.2;
-              color: #fff;
+              color: gray;
             }
             cite {
               color: silver;
@@ -124,7 +122,7 @@
   }
 }
 ///////////////////////// RESPONSIVE //////////////////////
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 1024px) {
   .home {
     .__container {
       display: block;
@@ -133,15 +131,24 @@
       flex-direction: column;
       position: absolute;
     }
-
     .__section {
+      justify-content: center;
       .__box {
+        width: 100%;
+        padding: 0;
         .__box_content {
-          padding: 3rem;
+          padding: 0.5rem;
           .__txt {
+            padding: 0;
             width: 100%;
-            p {
-              font-size: 16px;
+            blockquote {
+              display: block;
+              padding: 1.5rem 0;
+              p {
+                font-size: 16px;
+                line-height: 1.2;
+                color: whitesmoke;
+              }
             }
           }
 
