--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -8,16 +8,17 @@
   z-index: 4;
   align-items: center;
   //border: 7px solid red;
-  //background: turquoise;
+  background: rgb(21, 20, 20);
   position: fixed;
-  padding: 3rem;
+  //padding: 2rem;
 
   .__logo {
     display: flex;
     width: 23rem;
     object-fit: contain;
-    height: auto;
+    height: 10rem;
     padding: 1rem;
+    align-items: center;
     img {
       width: 100%;
       height: 100%;
@@ -54,7 +55,7 @@
           background: transparent;
           text-transform: capitalize;
           &:hover {
-            color: #000;
+            color: #fff;
           }
         }
       }
@@ -67,6 +68,7 @@
     cursor: pointer;
     opacity: 1;
     display: flex;
+    padding: 1rem;
 
     .__burger_btn {
       border: none;
@@ -127,7 +129,7 @@
     width: auto;
     height: auto;
     align-items: center;
-    width: 100%;
+    width: auto;
     justify-content: flex-end;
     margin-right: 2rem;
     cursor: pointer;
@@ -165,7 +167,7 @@
   .header {
     .__logo {
       display: flex;
-      width: 3rem;
+      width: 6rem;
       object-fit: contain;
       height: auto;
     }
