--- a/src/components/HeaderTxt/styles.module.scss
+++ b/src/components/HeaderTxt/styles.module.scss
@@ -69,7 +69,7 @@
     height: 100%;
     padding: 1rem;
     ul {
-      padding-top: 5rem;
+      padding-top: 0;
       li {
         blockquote {
           width: 100%;
