--- a/src/components/InstagramRecentPost/styles.module.scss
+++ b/src/components/InstagramRecentPost/styles.module.scss
@@ -7,6 +7,9 @@
   padding: 1rem;
   justify-content: center;
   margin-top: 10vh;
+  //font-size: 2rem;
+  /* font-weight: lighter; */
+  color: gray;
 
   p {
     display: block;
@@ -15,13 +18,13 @@
 
   .__media {
     display: flex;
-    width: auto;
-    height: auto;
+    width: 100%;
+    height: 100%;
     align-items: center;
     flex-direction: column;
     padding: 2rem;
     justify-content: center;
-    border: 3px solid gray;
+    border: 2px solid silver;
 
     img {
       width: 400px;
@@ -41,6 +44,40 @@
     p {
       font-size: 1rem;
       color: blue;
+    }
+  }
+}
+
+/////////////////// RESPONSIVE /////////////////
+@media screen and (max-width: 1024px) {
+  .instagram_recent_post_media {
+    display: flex;
+    width: auto;
+    height: auto;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+    justify-content: center;
+    margin-top: 10vh;
+    //font-size: 2rem;
+    /* font-weight: lighter; */
+    color: gray;
+
+    p {
+      display: block;
+      margin-bottom: 1rem;
+    }
+
+    .__media {
+      img {
+        width: 300px;
+        height: 400px;
+      }
+
+      video {
+        width: 300px;
+        height: 400px;
+      }
     }
   }
 }
