--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   height: auto;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #121212;
+  // background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -13,8 +14,8 @@
 
   #__bg {
     display: flex;
-    width: 100%;
-    height: auto;
+    width: 42%;
+    height: 100%;
   }
   img {
     object-fit: cover;
@@ -80,6 +81,11 @@
 //////////////////////// RESPONSIVE ///////////////////////////////
 @media only screen and (max-width: 768px) {
   .overlay {
+    #__bg {
+      display: flex;
+      width: 100%;
+      height: 100%;
+    }
     .__modalContainer {
       display: flex;
       align-items: center;
