--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   color: rgb(21, 20, 20);
   position: relative;
+  background: rgb(21, 20, 20);
 
   .__container {
     display: flex;
@@ -44,17 +45,22 @@
         padding: 2rem;
 
         .__txt {
-          width: 32%;
+          width: 100%;
           display: flex;
           margin-left: auto;
           z-index: 3;
           word-wrap: break-word;
-          //border: 12px solid rgb(255, 0, 174);
-          //background: turquoise;
+          //border: 4px solid blue;
+          justify-content: flex-end;
 
           blockquote {
-            display: block;
+            display: flex;
+            width: 44%;
             padding: 1.5rem 0;
+            justify-content: flex-end;
+            //border: 4px solid red;
+            flex-direction: column;
+
             p {
               font-size: 24px;
               line-height: 1.2;
@@ -70,46 +76,46 @@
           }
         }
 
-        .__ {
-          display: flex;
-          width: 16rem;
-          height: auto;
-          color: #000;
-          background: #dcdcdc;
-          border: 1px solid gray;
-          border-radius: 39px;
-          flex-direction: column;
-          padding: 2rem;
-          z-index: 3;
-          line-height: 1.5;
-          margin-left: auto;
+        // .__ {
+        //   display: flex;
+        //   width: 16rem;
+        //   height: auto;
+        //   color: #000;
+        //   background: #dcdcdc;
+        //   border: 1px solid gray;
+        //   border-radius: 39px;
+        //   flex-direction: column;
+        //   padding: 2rem;
+        //   z-index: 3;
+        //   line-height: 1.5;
+        //   margin-left: auto;
 
-          #__title {
-            p {
-              justify-content: center;
-              font-family: "Poppins", sans-serif;
-              font-style: normal;
-              font-size: 20px;
-              letter-spacing: 0.1em;
-              font-weight: lighter;
-              padding-bottom: 1rem;
-            }
-          }
+        //   #__title {
+        //     p {
+        //       justify-content: center;
+        //       font-family: "Poppins", sans-serif;
+        //       font-style: normal;
+        //       font-size: 20px;
+        //       letter-spacing: 0.1em;
+        //       font-weight: lighter;
+        //       padding-bottom: 1rem;
+        //     }
+        //   }
 
-          #__txt {
-            display: flex;
-            height: 100%;
-            width: 100%;
-            p {
-              font-weight: bold;
-              justify-content: center;
-              font-family: "Poppins", sans-serif;
-              font-style: normal;
-              font-size: 18px;
-              letter-spacing: 0.1em;
-            }
-          }
-        }
+        //   #__txt {
+        //     display: flex;
+        //     height: 100%;
+        //     width: 100%;
+        //     p {
+        //       font-weight: bold;
+        //       justify-content: center;
+        //       font-family: "Poppins", sans-serif;
+        //       font-style: normal;
+        //       font-size: 18px;
+        //       letter-spacing: 0.1em;
+        //     }
+        //   }
+        // }
       }
     }
   }
@@ -122,7 +128,7 @@
   }
 }
 ///////////////////////// RESPONSIVE //////////////////////
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1444px) {
   .home {
     .__container {
       display: block;
@@ -130,8 +136,10 @@
       width: 100%;
       flex-direction: column;
       position: absolute;
+      padding: 3rem;
     }
     .__section {
+      padding: 0;
       justify-content: center;
       .__box {
         width: 100%;
@@ -142,12 +150,82 @@
             padding: 0;
             width: 100%;
             blockquote {
+              width: 37%;
               display: block;
-              padding: 1.5rem 0;
+              /* padding: 1.5rem 0; */
+              padding: 2rem;
               p {
                 font-size: 16px;
                 line-height: 1.2;
-                color: whitesmoke;
+              }
+            }
+          }
+
+          .__gif {
+            justify-content: flex-start;
+            img {
+              width: 13rem;
+              height: auto;
+              border-radius: 34px;
+            }
+          }
+
+          .__ {
+            width: 12rem;
+            padding: 1rem;
+            margin: 0;
+
+            #__title {
+              p {
+                font-size: 16px;
+              }
+            }
+            #__txt {
+              p {
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .__footer {
+      padding: 0.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .home {
+    .__container {
+      display: block;
+      height: 100%;
+      width: 100%;
+      flex-direction: column;
+      position: absolute;
+      padding: 1rem;
+    }
+    .__section {
+      padding: 0;
+      justify-content: center;
+      .__box {
+        width: 100%;
+        padding: 0;
+        .__box_content {
+          padding: 0.5rem;
+          .__txt {
+            padding: 0;
+            width: 100%;
+            blockquote {
+              width: 100%;
+              padding: 1.5rem 0;
+              position: absolute;
+              display: flex;
+              top: 0;
+              padding: 1.5rem;
+              p {
+                font-size: 16px;
+                line-height: 1.2;
               }
             }
           }
