--- a/src/pages/Instagram/styles.module.scss
+++ b/src/pages/Instagram/styles.module.scss
@@ -1,10 +1,9 @@
 .insta_page__container {
   display: flex;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   align-items: center;
-  border: 7px solid red;
-  background: whitesmoke;
+  background: rgb(21, 20, 20);
   justify-content: center;
   align-items: center;
 }
