--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -3,14 +3,13 @@
 .header {
   display: flex;
   width: 100%;
-  height: auto;
+  height: 5rem;
   text-transform: capitalize;
   z-index: 4;
   align-items: center;
-  //border: 7px solid red;
   background: rgb(21, 20, 20);
   position: fixed;
-  //padding: 2rem;
+  //border: 4px solid yellow;
 
   .__logo {
     display: flex;
@@ -151,7 +150,8 @@
 }
 
 ///////////////////////// RESPONSIVE //////////////////////
-@media only screen and (min-width: 1022px) {
+
+@media only screen and (min-width: 1026px) {
   .__container_desk {
     display: flex !important;
     .__list_header {
@@ -163,7 +163,7 @@
   }
 }
 
-@media only screen and (max-width: 990px) {
+@media only screen and (max-width: 1024px) {
   .header {
     .__logo {
       display: flex;
@@ -183,6 +183,7 @@
     }
   }
 }
+
 @media only screen and (max-width: 820px) {
   .__container_desk {
     display: none;
