--- a/src/components/LoaderSpinner/styles.module.scss
+++ b/src/components/LoaderSpinner/styles.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #121212;
   opacity: 0.3;
   position: absolute;
   z-index: 999;
