--- a/src/components/ThreeCompt/styles.module.scss
+++ b/src/components/ThreeCompt/styles.module.scss
@@ -1,21 +1,21 @@
 .canvas__container {
   display: flex;
-  //width: 50%;
-  width: 87rem;
+  width: 100%;
   height: 100%;
-  //justify-content: center;
   align-items: center;
-  //border: 3px solid silver;
   margin-bottom: 1rem;
+  //border: 4px solid red;
+  position: relative;
+  justify-content: center;
 
   .canvas {
     display: flex;
-    width: 64%;
-    height: 80vh;
+    width: 80%;
+    height: 100%;
     cursor: move;
     position: relative;
-    border: 2px solid silver;
-    margin-top: 3vh;
+    //border: 1px solid silver;
+    margin-top: 4vh;
 
     &#canvas {
       display: flex;
@@ -35,7 +35,9 @@
     justify-content: center;
     align-items: center;
     .canvas {
+      height: 80vh;
       width: 100%;
+      margin-top: 10vh;
     }
   }
 }
@@ -47,8 +49,52 @@
     justify-content: center;
     align-items: center;
     .canvas {
+      height: 75vh;
+      width: 100%;
+      margin-top: 12vh;
+    }
+  }
+}
+@media screen and (max-width: 500px) {
+  .canvas__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    .canvas {
+      height: 70vh;
+      width: 100%;
+      margin-top: 16vh;
+    }
+  }
+}
+
+@media screen and (max-width: 393px) {
+  .canvas__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    .canvas {
+      height: 70vh;
+      width: 100%;
+      margin-top: 21vh;
+    }
+  }
+}
+@media screen and (max-width: 378px) {
+  .canvas__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    .canvas {
       height: 60vh;
       width: 100%;
+      margin-top: 25vh;
     }
   }
 }
