--- a/src/components/WhatsAppContact/styles.module.scss
+++ b/src/components/WhatsAppContact/styles.module.scss
@@ -1,13 +1,18 @@
 .contactContainer {
   text-align: center;
-  margin-top: 20px;
+  display: flex;
+  /* margin-top: 27px; */
+  //border: 2px solid red;
+  /* text-align: center; */
+  justify-content: center;
+  align-items: center;
 }
 
 .whatsappButton {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #25d366; /* WhatsApp green color */
-  color: white;
+  background-color: transparent;
+  color: #fff;
   text-decoration: none;
   border-radius: 5px;
   font-size: 16px;
@@ -15,5 +20,25 @@
 }
 
 .whatsappButton:hover {
-  background-color: #1ebea5; /* Slightly darker green on hover */
+  color: silver;
+}
+
+/////////////////// RESPONSIVE /////////////////
+@media screen and (max-width: 1024px) {
+  .whatsappButton {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .whatsappButton {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .whatsappButton {
+    padding: 0;
+    font-size: 14px;
+  }
 }
