--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -9,20 +9,12 @@
   position: relative;
   background: rgb(21, 20, 20);
 
-  .__container {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    flex-direction: column;
-    position: absolute;
-  }
-
   .__section {
     width: 100%;
     display: flex;
     overflow: hidden;
-    height: 90vh;
-    margin-top: 10vh;
+    height: 95vh;
+    margin-top: 5vh;
     justify-content: center;
     padding: 3rem;
 
@@ -35,6 +27,13 @@
       align-items: center;
       position: relative;
       //padding: 4rem;
+
+      .__container {
+        display: flex;
+        height: 100%;
+        width: 100%;
+        flex-direction: column;
+      }
 
       .__box_content {
         width: auto;
@@ -51,7 +50,7 @@
           z-index: 3;
           word-wrap: break-word;
           //border: 4px solid blue;
-          justify-content: flex-end;
+          justify-content: center;
 
           blockquote {
             display: flex;
@@ -135,7 +134,6 @@
       height: 100%;
       width: 100%;
       flex-direction: column;
-      position: absolute;
       padding: 3rem;
     }
     .__section {
@@ -150,10 +148,83 @@
             padding: 0;
             width: 100%;
             blockquote {
-              width: 37%;
+              width: 74%;
               display: block;
               /* padding: 1.5rem 0; */
               padding: 2rem;
+              p {
+                font-size: 16px;
+                line-height: 1.2;
+              }
+            }
+          }
+
+          .__gif {
+            justify-content: flex-start;
+            img {
+              width: 13rem;
+              height: auto;
+              border-radius: 34px;
+            }
+          }
+
+          .__ {
+            width: 12rem;
+            padding: 1rem;
+            margin: 0;
+
+            #__title {
+              p {
+                font-size: 16px;
+              }
+            }
+            #__txt {
+              p {
+                font-size: 14px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .__footer {
+      padding: 0.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .home {
+    .__container {
+      display: block;
+      height: 100%;
+      width: 100%;
+      flex-direction: column;
+      position: absolute;
+      padding: 1rem;
+    }
+    .__section {
+      padding: 0;
+      justify-content: center;
+      .__box {
+        width: 100%;
+        padding: 0;
+        .__box_content {
+          padding: 0.5rem;
+          display: flex;
+          position: absolute;
+          top: 34px;
+          padding: 0.5rem;
+          .__txt {
+            padding: 0;
+            width: 100%;
+            blockquote {
+              width: 100%;
+              padding: 1.5rem 0;
+
+              display: flex;
+              top: 0;
+              padding: 1.5rem;
               p {
                 font-size: 16px;
                 line-height: 1.2;
@@ -213,13 +284,17 @@
         padding: 0;
         .__box_content {
           padding: 0.5rem;
+          display: flex;
+          position: absolute;
+          top: 34px;
+          padding: 0.5rem;
           .__txt {
             padding: 0;
             width: 100%;
             blockquote {
               width: 100%;
               padding: 1.5rem 0;
-              position: absolute;
+
               display: flex;
               top: 0;
               padding: 1.5rem;
