--- a/src/components/ThreeCompt/styles.module.scss
+++ b/src/components/ThreeCompt/styles.module.scss
@@ -14,7 +14,7 @@
     height: 100%;
     cursor: move;
     position: relative;
-    //border: 1px solid silver;
+    //border: 4px solid red;
     margin-top: 4vh;
 
     &#canvas {
