--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -57,7 +57,7 @@
             width: 44%;
             padding: 1.5rem 0;
             justify-content: flex-end;
-            //border: 4px solid red;
+            background: rgb(21, 20, 20);
             flex-direction: column;
 
             p {
