--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -49,7 +49,6 @@
           margin-left: auto;
           z-index: 3;
           word-wrap: break-word;
-          //border: 4px solid blue;
           justify-content: center;
 
           blockquote {
@@ -89,28 +88,26 @@
 ///////////////////////// RESPONSIVE //////////////////////
 @media only screen and (max-width: 1444px) {
   .home {
-    .__container {
-      display: block;
-      height: 100%;
-      width: 100%;
-      flex-direction: column;
-      padding: 3rem;
-    }
     .__section {
       padding: 0;
       justify-content: center;
       .__box {
         width: 100%;
         padding: 0;
+        .__container {
+          padding: 3rem;
+        }
         .__box_content {
           padding: 0.5rem;
+          display: flex;
+          position: absolute;
+          top: 34px;
+          width: 100%;
           .__txt {
             padding: 0;
             width: 100%;
             blockquote {
-              width: 74%;
-              display: block;
-              /* padding: 1.5rem 0; */
+              width: 100%;
               padding: 2rem;
               p {
                 font-size: 16px;
@@ -118,110 +115,52 @@
               }
             }
           }
-
-          .__gif {
-            justify-content: flex-start;
-            img {
-              width: 13rem;
-              height: auto;
-              border-radius: 34px;
-            }
-          }
-
-          .__ {
-            width: 12rem;
-            padding: 1rem;
-            margin: 0;
-
-            #__title {
-              p {
-                font-size: 16px;
-              }
-            }
-            #__txt {
-              p {
-                font-size: 14px;
-              }
-            }
-          }
         }
       }
-    }
-    .__footer {
-      padding: 0.5rem;
     }
   }
 }
 
 @media only screen and (max-width: 1024px) {
   .home {
-    .__container {
-      display: block;
-      height: 100%;
-      width: 100%;
-      flex-direction: column;
-      position: absolute;
-      padding: 1rem;
-    }
     .__section {
       padding: 0;
       justify-content: center;
       .__box {
         width: 100%;
         padding: 0;
+        .__container {
+          // display: flex;
+          // height: 100%;
+          // width: 100%;
+          // flex-direction: column;
+          position: absolute;
+          padding: 1rem;
+        }
         .__box_content {
           padding: 0.5rem;
           display: flex;
           position: absolute;
           top: 34px;
-          padding: 0.5rem;
+          width: 100%;
           .__txt {
             padding: 0;
             width: 100%;
             blockquote {
-              width: 100%;
-              padding: 1.5rem 0;
+              // width: 100%;
+              // padding: 1.5rem 0;
 
-              display: flex;
+              // display: flex;
               top: 0;
               padding: 1.5rem;
               p {
                 font-size: 16px;
-                line-height: 1.2;
-              }
-            }
-          }
-
-          .__gif {
-            justify-content: flex-start;
-            img {
-              width: 13rem;
-              height: auto;
-              border-radius: 34px;
-            }
-          }
-
-          .__ {
-            width: 12rem;
-            padding: 1rem;
-            margin: 0;
-
-            #__title {
-              p {
-                font-size: 16px;
-              }
-            }
-            #__txt {
-              p {
-                font-size: 14px;
+                // line-height: 1.2;
               }
             }
           }
         }
       }
-    }
-    .__footer {
-      padding: 0.5rem;
     }
   }
 }
@@ -241,60 +180,32 @@
       justify-content: center;
       .__box {
         width: 100%;
+        width: 100%;
         padding: 0;
-        .__box_content {
-          padding: 0.5rem;
-          display: flex;
-          position: absolute;
-          top: 34px;
-          padding: 0.5rem;
-          .__txt {
-            padding: 0;
-            width: 100%;
-            blockquote {
-              width: 100%;
-              padding: 1.5rem 0;
+        // .__box_content {
+        //   padding: 0.5rem;
+        //   display: flex;
+        //   position: absolute;
+        //   top: 34px;
+        //   padding: 0.5rem;
+        //   .__txt {
+        //     padding: 0;
+        //     width: 100%;
+        //     blockquote {
+        //       width: 100%;
+        //       padding: 1.5rem 0;
+        //       display: flex;
+        //       top: 0;
+        //       padding: 1.5rem;
+        //       p {
+        //         font-size: 16px;
+        //         line-height: 1.2;
+        //       }
+        //     }
+        //   }
 
-              display: flex;
-              top: 0;
-              padding: 1.5rem;
-              p {
-                font-size: 16px;
-                line-height: 1.2;
-              }
-            }
-          }
-
-          .__gif {
-            justify-content: flex-start;
-            img {
-              width: 13rem;
-              height: auto;
-              border-radius: 34px;
-            }
-          }
-
-          .__ {
-            width: 12rem;
-            padding: 1rem;
-            margin: 0;
-
-            #__title {
-              p {
-                font-size: 16px;
-              }
-            }
-            #__txt {
-              p {
-                font-size: 14px;
-              }
-            }
-          }
-        }
+        // }
       }
-    }
-    .__footer {
-      padding: 0.5rem;
     }
   }
 }
